--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 astroid==2.2.5
+autopep8==1.4.4
 beautifulsoup4==4.8.0
 certifi==2019.6.16
 chardet==3.0.4
 databases==0.2.5
-django>=2.2.4
+Django==2.2.3
 django-appconf==1.0.3
 django-crispy-forms==1.7.2
 django-request==1.5.4
 django-tinymce-lite==0.0.2
+django-tinymce4-lite==1.7.5
 idna==2.8
 isort==4.3.21
+jsmin==2.2.2
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 mysql-connector==2.2.9
@@ -18,6 +21,7 @@ numpy==1.16.4
 pbr==5.4.0
 Pillow==6.1.0
 protobuf==3.9.0
+pycodestyle==2.5.0
 pylint==2.3.1
 pysqlite3==0.2.1
 python-dateutil==2.8.0
